--- a/index.html
+++ b/index.html
@@ -347,6 +347,21 @@
 
                 <div class="nk-isotope-item" data-filter="Design">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="creditcards.html" class="nk-portfolio-item-link"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/img/Creditcards/cc2.png');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                            <div>
+                                <h2 class="portfolio-item-title h3">TD Lab</h2>
+                                <div class="portfolio-item-category">Sketch</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="nk-isotope-item" data-filter="Design">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="aquabicylinder.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/Aquabicylinder/prototype.jpg');"></div>
@@ -361,7 +376,7 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Circuits">
+                <!-- <div class="nk-isotope-item" data-filter="Circuits">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="slot-machine.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
@@ -374,7 +389,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="nk-isotope-item" data-filter="CAD">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
