--- a/jubatap.html
+++ b/jubatap.html
@@ -262,16 +262,16 @@
 
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
-            <div class="container">
-                <!-- <a class="nk-pagination-prev" href="portfolio.html">
-                    <span class="pe-7s-angle-left"></span> Previous Work</a> -->
-                <a class="nk-pagination-center" href="portfolio.html">
-                    <span class="nk-icon-squares"></span>
-                </a>
-                <a class="nk-pagination-next" href="pottery2.html">Next Work <span class="pe-7s-angle-right"></span> </a>
+                <div class="container">
+                    <a class="nk-pagination-prev" href="aquabicylinder.html">
+                        <span class="pe-7s-angle-left"></span> Previous Work</a>
+                    <a class="nk-pagination-center" href="portfolio.html">
+                        <span class="nk-icon-squares"></span>
+                    </a>
+                    <a class="nk-pagination-next" href="war-of-the-web.html">Next Work <span class="pe-7s-angle-right"></span> </a>
+                </div>
             </div>
-        </div>
-        <!-- END: Pagination -->
+            <!-- END: Pagination -->
 
 
 
