--- a/pencil-hand.html
+++ b/pencil-hand.html
@@ -217,7 +217,7 @@
                 <a class="nk-pagination-center" href="portfolio.html">
                     <span class="nk-icon-squares"></span>
                 </a>
-                <a class="nk-pagination-next" href="rustic-daisy.html">Next Work <span class="pe-7s-angle-right"></span> </a>
+                <a class="nk-pagination-next" href="portfolio.html">Next Work <span class="pe-7s-angle-right"></span> </a>
             </div>
         </div>
         <!-- END: Pagination -->
