--- a/pottery.html
+++ b/pottery.html
@@ -216,7 +216,7 @@
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
-                <a class="nk-pagination-prev" href="malibu-sunset.html">
+                <a class="nk-pagination-prev" href="charcoal-lady.html">
                     <span class="pe-7s-angle-left"></span> Previous Work</a>
                 <a class="nk-pagination-center" href="portfolio.html">
                     <span class="nk-icon-squares"></span>
