--- a/aquabicylinder.html
+++ b/aquabicylinder.html
@@ -230,12 +230,12 @@
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
-                <a class="nk-pagination-prev" href="maer-jono.html">
+                <a class="nk-pagination-prev" href="pottery2.html">
                     <span class="pe-7s-angle-left"></span> Previous Work</a>
                 <a class="nk-pagination-center" href="portfolio.html">
                     <span class="nk-icon-squares"></span>
                 </a>
-                <a class="nk-pagination-next" href="war-of-the-web.html">Next Work <span class="pe-7s-angle-right"></span> </a>
+                <a class="nk-pagination-next" href="jubatap.html">Next Work <span class="pe-7s-angle-right"></span> </a>
             </div>
         </div>
         <!-- END: Pagination -->
