--- a/charcoal-lady.html
+++ b/charcoal-lady.html
@@ -223,12 +223,12 @@
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
-                <a class="nk-pagination-prev" href="slot-machine.html">
+                <a class="nk-pagination-prev" href="psyche.html">
                     <span class="pe-7s-angle-left"></span> Previous Work</a>
                 <a class="nk-pagination-center" href="portfolio.html">
                     <span class="nk-icon-squares"></span>
                 </a>
-                <a class="nk-pagination-next" href="malibu-sunset.html">Next Work <span class="pe-7s-angle-right"></span> </a>
+                <a class="nk-pagination-next" href="pottery.html">Next Work <span class="pe-7s-angle-right"></span> </a>
             </div>
         </div>
         <!-- END: Pagination -->
