--- a/portfolio.html
+++ b/portfolio.html
@@ -194,6 +194,21 @@
                     </div>
                 </div>
 
+                <div class="nk-isotope-item" data-filter="Mockp">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="creditcards.html" class="nk-portfolio-item-link"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/img/Creditcards/cc2.png');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                            <div>
+                                <h2 class="portfolio-item-title h3">TD Lab</h2>
+                                <div class="portfolio-item-category">Sketch</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="nk-isotope-item" data-filter="Pottery">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="pottery2.html" class="nk-portfolio-item-link"></a>
@@ -240,6 +255,20 @@
                     </div>
                 </div>
 
+                <div class="nk-isotope-item" data-filter="Product">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="jubatap.html" class="nk-portfolio-item-link"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/img/JubaTap/HFP3.png');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                            <div>
+                                <h2 class="portfolio-item-title h3">JubaTap</h2>
+                                <div class="portfolio-item-category">Product Design</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="nk-isotope-item" data-filter="Product">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
