--- a/war-of-the-web.html
+++ b/war-of-the-web.html
@@ -256,7 +256,7 @@
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
-                <a class="nk-pagination-prev" href="aquabicylinder.html">
+                <a class="nk-pagination-prev" href="jubatap.html">
                     <span class="pe-7s-angle-left"></span> Previous Work</a>
                 <a class="nk-pagination-center" href="portfolio.html">
                     <span class="nk-icon-squares"></span>
