added hp to portfolio

--- a/hp.html
+++ b/hp.html
@@ -193,7 +193,7 @@
                                 <td>
                                     <strong>Tools:</strong>
                                 </td>
-                                <td>Figma, Invision</td>
+                                <td>Figma, Invision, Procreate</td>
                             </tr>
                             <!-- <tr>
                                 <td>
@@ -221,12 +221,12 @@
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
-                <a class="nk-pagination-prev" href="maer-jono.html">
+                <a class="nk-pagination-prev" href="portfolio.html">
                     <span class="pe-7s-angle-left"></span> Previous Work</a>
                 <a class="nk-pagination-center" href="portfolio.html">
                     <span class="nk-icon-squares"></span>
                 </a>
-                <a class="nk-pagination-next" href="war-of-the-web.html">Next Work <span class="pe-7s-angle-right"></span> </a>
+                <a class="nk-pagination-next" href="spotifyredesign.html">Next Work <span class="pe-7s-angle-right"></span> </a>
             </div>
         </div>
         <!-- END: Pagination -->
