--- a/portfolio.html
+++ b/portfolio.html
@@ -181,6 +181,21 @@
 
                 <div class="nk-isotope-item" data-filter="Mockup">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <a href="hp.html" class="nk-portfolio-item-link"></a>
+                        <div class="nk-portfolio-item-image">
+                            <div style="background-image: url('assets/img/Healthypets/perks.png');"></div>
+                        </div>
+                        <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
+                            <div>
+                                <h2 class="portfolio-item-title h3">Healthy Pets</h2>
+                                <div class="portfolio-item-category">Figma, Procreate</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="nk-isotope-item" data-filter="Mockup">
+                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="spotifyredesign.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/SpotifyTile.jpg');"></div>
@@ -194,7 +209,7 @@
                     </div>
                 </div>
 
-                <div class="nk-isotope-item" data-filter="Mockp">
+                <div class="nk-isotope-item" data-filter="Mockup">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
                         <a href="creditcards.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
