--- a/spotifyredesign.html
+++ b/spotifyredesign.html
@@ -309,7 +309,7 @@
         <!-- START: Pagination -->
         <div class="nk-pagination nk-pagination-center">
             <div class="container">
-                <a class="nk-pagination-prev" href="portfolio.html">
+                <a class="nk-pagination-prev" href="hp.html">
                     <span class="pe-7s-angle-left"></span> Previous Work</a>
                 <a class="nk-pagination-center" href="portfolio.html">
                     <span class="nk-icon-squares"></span>
