changed portfolio images into icons

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                     <div class="nk-nav-social">
                         <ul>
                             <li><a href="https://www.facebook.com/caitlynkodric"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
+                            <!--<li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>-->
                             <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
-                            <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.instagram.com/designbycmyk"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://dribbble.com/ckodric"><i class="fa fa-dribbble"></i></a></li>
                         </ul>
                     </div>
@@ -203,11 +203,14 @@
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2 text-xs-center">
                         <div class="nk-gap-4 mt-9"></div>
+                        <br/><br/>
 
                         <h2 class="display-4">About Me</h2>
+                        <br/><br/>
                         <div class="nk-gap mnt-6"></div>
                         <div class="col-lg-12">
                             <img src="assets/img/headshot.png" alt="Avatar" style="width:30%; border-radius:100%">
+                            <br/><br/>
                         </div>
                         <div class="col-lg-12">
                             <p>
@@ -293,34 +296,34 @@
         <!-- END: Features -->
 
         <!-- START: Portfolio -->
-        <div class="nk-box bg-white" id="projects">
-            <div class="nk-gap-4 mt-5"></div>
+        <!-- <div class="nk-box bg-white" id="projects">
+            <div class="nk-gap-4 mt-5"></div> -->
 
-            <h2 class="text-xs-center display-4">Projects</h2>
+            <!-- <h2 class="text-xs-center display-4">Projects</h2> -->
             <!-- <p class="text-xs-center">
                 Individul projects pictures coming soon ... 
             </p> -->
-            <div class="nk-gap mnt-6"></div>
+            <!-- <div class="nk-gap mnt-6"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 offset-lg-2">
+                    <div class="col-lg-8 offset-lg-2"> -->
                         <!-- <div class="text-xs-center">
                             Check out some of my projects?
                         </div> -->
-                    </div>
+                    <!-- </div>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="nk-gap-2 mt-12"></div>
+            <!-- <div class="nk-gap-2 mt-12"></div>
             <div class="container">
             <div class="nk-portfolio-list nk-isotope nk-isotope-3-cols">
 
 
                 <div class="nk-isotope-item" data-filter="Design">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="hp.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Healthypets/perks.png');"></div>
+                            <div style="background-image: url('assets/img/Tiles/hp.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -332,10 +335,10 @@
                 </div>
 
                 <div class="nk-isotope-item" data-filter="Design">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="spotifyredesign.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/SpotifyTile.jpg');"></div>
+                            <div style="background-image: url('assets/img/Tile/spotify.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -344,10 +347,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="nk-isotope-item" data-filter="Mockup">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="maer-jono.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/MaerJonoTile.jpg');"></div>
@@ -361,11 +364,11 @@
                     </div>
                 </div> -->
 
-                <div class="nk-isotope-item" data-filter="Design">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                <!-- <div class="nk-isotope-item" data-filter="Design">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="creditcards.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Creditcards/cc2.png');"></div>
+                            <div style="background-image: url('assets/img/Tiles/td.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -374,13 +377,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="nk-isotope-item" data-filter="Design">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                <!-- <div class="nk-isotope-item" data-filter="Design">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="aquabicylinder.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Aquabicylinder/prototype.jpg');"></div>
+                            <div style="background-image: url('assets/img/Tiles/aqua.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -389,11 +392,11 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
                 <!-- <div class="nk-isotope-item" data-filter="Circuits">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="slot-machine.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/SlotMachine/top.jpg');"></div>
@@ -406,9 +409,9 @@
                         </div>
                     </div>
                 </div> -->
-
+<!-- 
                 <div class="nk-isotope-item" data-filter="CAD">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="pasta.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/Pasta/rendered.png');"></div>
@@ -420,13 +423,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="nk-isotope-item" data-filter="ArtWork">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                <!-- <div class="nk-isotope-item" data-filter="ArtWork">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="psyche.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Oil/Psyche/Step6.jpg');"></div>
+                            <div style="background-image: url('assets/img/Tiles/cbpsyche.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -435,15 +438,15 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-            </div>
-            </div>
+            <!-- </div>
+            </div> -->
 
             <!-- START: Pagination -->
-            <div class="nk-pagination nk-pagination-center">
+            <!-- <div class="nk-pagination nk-pagination-center">
                 <a href="portfolio.html">Load More</a>
-            </div>
+            </div> -->
             <!-- END: Pagination -->
         </div>
         <!-- END: Portfolio -->
@@ -457,7 +460,7 @@
             Individul projects pictures coming soon ... 
         </p> -->
         <div class="nk-gap mnt-6"></div>
-        <div class="container">
+        <!-- <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
                     <div class="text-xs-center">
@@ -465,14 +468,14 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="nk-gap-2 mt-12"></div>
         <div class="container">
-        <div class="nk-portfolio-list nk-isotope nk-isotope-4-cols">
+        <div class="nk-portfolio-list nk-isotope nk-isotope-3-cols">
 
             <div class="nk-isotope-item">
-                <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                     <!-- <a href="hp.html" class="nk-portfolio-item-link"></a> -->
                     <div class="nk-portfolio-item-image">
                         <div style="background-image: url('assets/img/Jobs/hplogo.png');"></div>
@@ -480,14 +483,14 @@
                     <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                         <div>
                             <h2 class="portfolio-item-title h3">Healthy Pets</h2>
-                            <div class="portfolio-item-category">Product Manager, Design, Development</div>
+                            <div class="portfolio-item-category">Product Manager</div>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="nk-isotope-item">
-                <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                     <!-- <a href="td.html" class="nk-portfolio-item-link"></a> -->
                     <div class="nk-portfolio-item-image">
                         <div style="background-image: url('assets/img/Jobs/tdlab.png');"></div>
@@ -502,7 +505,7 @@
             </div>
 
             <div class="nk-isotope-item">
-                <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                     <div class="nk-portfolio-item-image">
                         <div style="background-image: url('assets/img/Jobs/ifds.png');"></div>
                     </div>
@@ -516,7 +519,7 @@
             </div>
 
             <div class="nk-isotope-item">
-                <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                     <div class="nk-portfolio-item-image">
                         <div style="background-image: url('assets/img/Jobs/majik.png');"></div>
                     </div>
@@ -531,7 +534,7 @@
 
 
             <div class="nk-isotope-item">
-                <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                     <div class="nk-portfolio-item-image">
                         <div style="background-image: url('assets/img/Jobs/veriday.png');"></div>
                     </div>
@@ -889,9 +892,9 @@
                     <div class="nk-footer-social">
                         <ul>
                             <li><a href="https://www.facebook.com/caitlynkodric"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
+                            <!--<li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>-->
                             <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
-                            <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.instagram.com/designbycmyk"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://dribbble.com/ckodric"><i class="fa fa-dribbble"></i></a></li>
                         </ul>
                     </div>
