--- a/portfolio.html
+++ b/portfolio.html
@@ -139,9 +139,9 @@
                     <div class="nk-nav-social">
                         <ul>
                             <li><a href="https://www.facebook.com/caitlynkodric"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
+                            <!--<li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>-->
                             <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
-                            <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.instagram.com/designbycmyk"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://dribbble.com/ckodric"><i class="fa fa-dribbble"></i></a></li>
                         </ul>
                     </div>
@@ -154,7 +154,23 @@
 
     <div class="nk-main">
 
+        <div id="projects">
+            <div class="nk-gap-4 mt-5"></div>
 
+            <h2 class="text-xs-center display-4">Projects</h2>
+            <!-- <p class="text-xs-center">
+                Individul projects pictures coming soon ... 
+            </p>
+            <div class="nk-gap mnt-6"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 offset-lg-2">
+                        <div class="text-xs-center">
+                            Check out some of my projects?
+                        </div>
+                    </div> -->
+                </div>
+            </div>
 
 
         <div class="container">
@@ -168,10 +184,10 @@
                 <li class="active" data-filter="*">All</li>
                 <li data-filter="Product">Product</li>
                 <li data-filter="ArtWork">Art Work</li>
-                <li data-filter="CAD">CAD</li>
+                <!-- <li data-filter="CAD">CAD</li> -->
                 <!-- <li data-filter="Circuits">Circuits</li> -->
                 <li data-filter="Mockup">Mockup</li>
-                <li data-filter="Pottery">Pottery</li>
+                <!-- <li data-filter="Pottery">Pottery</li> -->
             </ul>
             <!-- END: Filter -->
 
@@ -180,10 +196,10 @@
             <div class="nk-portfolio-list nk-isotope nk-isotope-3-cols">
 
                 <div class="nk-isotope-item" data-filter="Mockup">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="hp.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Healthypets/perks.png');"></div>
+                            <div style="background-image: url('assets/img/Tiles/hp.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -195,10 +211,10 @@
                 </div>
 
                 <div class="nk-isotope-item" data-filter="Mockup">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="spotifyredesign.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/SpotifyTile.jpg');"></div>
+                            <div style="background-image: url('assets/img/Tiles/spotify.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -210,10 +226,10 @@
                 </div>
 
                 <div class="nk-isotope-item" data-filter="Mockup">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="creditcards.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Creditcards/cc2.png');"></div>
+                            <div style="background-image: url('assets/img/Tiles/td.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -224,8 +240,8 @@
                     </div>
                 </div>
 
-                <div class="nk-isotope-item" data-filter="Pottery">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                <!-- <div class="nk-isotope-item" data-filter="Pottery">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="pottery2.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/Pottery2/Glazed.jpg');"></div>
@@ -237,10 +253,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 <!--                 
                 <div class="nk-isotope-item" data-filter="Mockup">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="maer-jono.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/MaerJonoTile.jpg');"></div>
@@ -256,10 +272,10 @@
 
 
                 <div class="nk-isotope-item" data-filter="Product">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="aquabicylinder.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Aquabicylinder/prototype.jpg');"></div>
+                            <div style="background-image: url('assets/img/Tiles/aqua.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -271,10 +287,10 @@
                 </div>
 
                 <div class="nk-isotope-item" data-filter="Product">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="jubatap.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/JubaTap/HFP3.png');"></div>
+                            <div style="background-image: url('assets/img/Tiles/jubatap.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -286,10 +302,10 @@
                 </div>
 
                 <div class="nk-isotope-item" data-filter="Product">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="war-of-the-web.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/WaroftheWeb/board.jpg');"></div>
+                            <div style="background-image: url('assets/img/Tiles/boardgame.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -301,8 +317,8 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="CAD">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                <!-- <div class="nk-isotope-item" data-filter="CAD">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="pasta.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/Pasta/rendered.png');"></div>
@@ -314,11 +330,11 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
                 <!-- <div class="nk-isotope-item" data-filter="Mockup">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="snaptrax.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/SnaptraxTile.jpg');"></div>
@@ -334,10 +350,10 @@
 
 
                 <div class="nk-isotope-item" data-filter="ArtWork">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="psyche.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Oil/Psyche/Step6.jpg');"></div>
+                            <div style="background-image: url('assets/img/Tiles/cbpsyche.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -350,7 +366,7 @@
 
 
                 <!-- <div class="nk-isotope-item" data-filter="Circuits">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="slot-machine.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/SlotMachine/top.jpg');"></div>
@@ -366,10 +382,10 @@
 
 
                 <div class="nk-isotope-item" data-filter="ArtWork">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="charcoal-lady.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Charcoal/Lady/Step4.jpg');"></div>
+                            <div style="background-image: url('assets/img/Tiles/cbbody.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -382,7 +398,7 @@
 
 
                 <!-- <div class="nk-isotope-item" data-filter="ArtWork">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="malibu-sunset.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/Acrylic/Malibu Sunset.jpg');"></div>
@@ -397,8 +413,8 @@
                 </div> -->
 
 
-                <div class="nk-isotope-item" data-filter="Pottery">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                <!-- <div class="nk-isotope-item" data-filter="Pottery">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="pottery.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/Pottery/Step4.jpg');"></div>
@@ -410,13 +426,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="nk-isotope-item" data-filter="ArtWork">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="pencil-hand.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/img/Pencil/CB Hand.jpg');"></div>
+                            <div style="background-image: url('assets/img/Tiles/cbhand.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
@@ -429,7 +445,7 @@
 
 
                 <!-- <div class="nk-isotope-item" data-filter="ArtWork">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="rustic-daisy.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/Acrylic/Rustic Daisy.jpg');"></div>
@@ -445,7 +461,7 @@
 
 
                 <!-- <div class="nk-isotope-item" data-filter="ArtWork">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="moonlight-forest.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/Acrylic/Moonlight Forest.jpg');"></div>
@@ -460,7 +476,7 @@
                 </div> -->
 
                 <!-- <div class="nk-isotope-item" data-filter="ArtWork">
-                    <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                    <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                         <a href="red-tulips.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
                             <div style="background-image: url('assets/img/Acrylic/Red Tulips.jpg');"></div>
@@ -475,7 +491,7 @@
                 </div> -->
 
                 <!-- <div class="nk-isotope-item" data-filter="ArtWork">
-                        <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
+                        <div class="nk-portfolio-item nk-portfolio-item-info-style-1">
                             <a href="dandelion.html" class="nk-portfolio-item-link"></a>
                             <div class="nk-portfolio-item-image">
                                 <div style="background-image: url('assets/img/Acrylic/Dandelion.jpg');"></div>
@@ -513,9 +529,9 @@
                     <div class="nk-footer-social">
                         <ul>
                             <li><a href="https://www.facebook.com/caitlynkodric"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
+                            <!--<li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>-->
                             <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
-                            <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.instagram.com/designbycmyk"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://dribbble.com/ckodric"><i class="fa fa-dribbble"></i></a></li>
                         </ul>
                     </div>
