--- a/spotifyredesign.html
+++ b/spotifyredesign.html
@@ -139,9 +139,9 @@
                 <div class="container">
                     <ul>
                         <li><a href="https://www.facebook.com/caitlynkodric"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
+                        <!--<li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>-->
                         <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
-                        <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://www.instagram.com/designbycmyk"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="https://dribbble.com/ckodric"><i class="fa fa-dribbble"></i></a></li>
                     </ul>
                     </div>
@@ -332,9 +332,9 @@
                     <div class="nk-footer-social">
                         <ul>
                             <li><a href="https://www.facebook.com/caitlynkodric"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
+                            <!--<li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>-->
                             <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
-                            <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.instagram.com/designbycmyk"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://dribbble.com/ckodric"><i class="fa fa-dribbble"></i></a></li>
                         </ul>
                     </div>
