added juba tap process

--- a/jubatap.html
+++ b/jubatap.html
@@ -169,7 +169,8 @@
                             <div class="nk-portfolio-text">
                                 <h3 class="nk-portfolio-title">Introduction</h3>
                                 <p>
-                                    <!-- Test -->
+                                    This project was to take an existing music instrument that was not an included in the Toronto Symphony.  
+                                    Master Juba was one of the first African-American tap dancers in the 1800’s, thus Juba Tap was born [<a href="https://en.wikipedia.org/wiki/Master_Juba]">1</a>]. 
                                 </p>
                                 <h3 class="nk-portfolio-title">Users</h3>
                                 <p>
@@ -180,7 +181,12 @@
                                 </p> 
                                 <h3 class="nk-portfolio-title">Design Sprint</h3>
                                 <p>
-                                    <!-- test -->
+                                    To begin the project we used the Google Design Sprint by Jake Knapp . 
+                                    For day 1,  understand,  we used multiple methods of ideation. We used How Might We’s, user tables, maps, and sprint questions to develop the base of the initial idea.  
+                                    For day 2, sketch, each individual member use the crazy 8’s method to sketch quick solutions to the problem. Each member then used their shoe and accessory ideas to create their final solution sketch.  
+                                    For day 3, decide, the solution sketches were hung anonymously to ensure no bias judgement.  To decide which ideas were feasible, we used silent heat map voting and final discussion. 
+                                    For day 4, validate, we used the storyboard that we created to begin designing the low-fidelity prototype. For the final day, testing, we tested the prototype with other Systems Design students. 
+                                    This final day, testing, gave us feedback for the 3D printed taps and the associated web prototype to introduce sensor settings.
                                 </p>
                                 <p>
                                     <img src="assets/img/JubaTap/sprint.png" style="width:30%">
@@ -189,7 +195,12 @@
                                 </p>    
                                 <h3 class="nk-portfolio-title">User Testing</h3>
                                 <p>
-                                    <!-- test -->
+                                    The MFP included real sensors and mapping to Ableton, a music production software. 
+                                    During the session we asked users to speak their thoughts but it is quite difficult when testing a project. 
+                                    When users first tried on the shoe they would ‘play around’ to feel for comfort. When I was watching people test I wanted to know the pattern that a new user would take to learn the shoe. 
+                                    While looking that the users movements, I would consistently ask, “what are trying to accomplish?” or “why do you look confused?” to pull out more specific patterns and feedback. The more in-depth feedback of our prototype really helped our group determine what the most and least common responses were. 
+                                    The user testing led to a meeting were the group was able to determine the new placements of the sensors on the bottom of the shoe. 
+                                    Since the new shoes have different bending locations we were able to test the strongest pressure points on the toes, ball, and heel of the foot
                                 </p>
                                 <p>
                                     <img src="assets/img/JubaTap/usertesting.png" style="width:90%">
