--- a/creditcards.html
+++ b/creditcards.html
@@ -169,11 +169,24 @@
                             <div class="nk-portfolio-text">
                                 <h3 class="nk-portfolio-title">Background</h3>
                                 <p>
-                                    The TD Lab is located in the Communitech buildings. Due to the research and development phases at the lab the work done at TD is closed by NDA.
-                                </p>
-                                <h3 class="nk-portfolio-title">Hackathon</h3>
+                                    The hackathon idea was given to the co-ops from the TD Toronto team. Each team had 4 work days to pursue their idea. My group consisted of a business analyst, a developer, and a designer. The theme of the project was credit cards. Solutions were created to feature the millennial user and their stance against credit cards.
+                                    The project we created ultimately resulted in a very personalize credit card experience. It let the users choose the right card for their needs by walking them through the process of the application so they are not kept guessing.</p>
+                                <h3 class="nk-portfolio-title">Method</h3>
                                 <p>
-                                    During the middle of the co-op term we participated in a Hackathon that was proposed by corporate TD. The invision board below was our protoype example.
+                                    Checkout the Invision prototype <a href="https://invis.io/XZQ0WLICWB9">here</a>! 
+                                    <br/><br/>
+                                    Given the project topic, we used a case study based on user interviews conducted by the business analyst that answered questions about users personal interaction with credit cards. Some the results involved users being scared of debt, not knowing the benefits of credit, and not knowing which credit card suits their situation.
+                                    Based on discussion, we targeted problems that users were most concerned with targeting one of those concerns with a basic idea of not knowing the benefits of credit. Credit cards benefit users via point systems, cash back, and point systems. We started with a few pages of info that taught users credit cards, interest rates, rewards, and credit scores. A questionnaire then asked users about their credit card goals. 
+                                    One of the biggest questions from applying online is will I be approved. Half of the time you need to call into the bank to speak with an expert. To solve this, online steps were adding to show you where in the application process you are. This gave the user more comfort in knowing what the process was. This shows that bank’s transparency about credit cards with the user.
+                                    <br/><br/>
+                                    Many users choose credit cards based on the rewards they are offered and millennials are willing to switch banks for better rewards. Our design follows a user that has a cash back credit card. When users pay off their credit card in full for 3 months consecutively they will gain a streak and a reward for one month. We found that millennials easily understood this since Snapchat uses the same style. 
+                                    Changing the rewards systems with an extra month of rewards gave users incentive to use TD. Currently TD cash back visa give users 1% cash back for groceries, gas, and bills. Every other purchase gets 0.5% cash back.  Users did not like their categories since most millennials are looking to spend their money elsewhere. Our solution to this was allowing users to change their cash back categories every 6 months to suit their needs. The six month minimum stops users from changing them before every purchase.
+                                    We also like the idea of users having full choice of their credit card experience. We personalized the experience for receiving rewards and spending them. To get rewards, ideas that we put into the app were, changing your interest free period by extending it by a month, lowering interest ratite 15% for the month, and increasing  one cash back category to 2% percentage. To spend rewards, we allowed users to shop the TD store, pay with cash back, and transfer to investment account. 
+                                    <br/><br/>
+                                    Many millennials find doubts with banks with regards to investing money. Adding this as a way to redeem points can help millennials invest their money without being scared to invest ‘their own’ money.
+                                    The credit score feature was added from researching that users don’t know they need credit to make large purchases until it is too late. By showing them their score and tips to improve it. This solution was used to help users before it’s too late. Having the ability to access ones credit score is another way to show the banks transparency with the user.
+                                    This solution was based on the research conducted about millennials and how they use credit cards and why they are scared to have one.
+                                    Millennials love  having the ultimate choice. The ability to choose the categories for a certain amount of time after collecting rewards shows that the bank is here to help them with their finances. 
                                 </p>
                             </div>
                         </div>
