--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Oct 23 2019 03:10:49 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Oct 25 2019 01:51:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5da68cccc102b9f549320281" data-wf-site="5da68cccc102b983e8320279">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,7 @@
       <div class="about-head-text-wrap">
         <div class="label cc-about-light">Hi there!</div>
         <h2 class="hi-there-heading">I&#x27;m Caitlyn Kodric</h2>
-        <p class="paragraph-light">🎓- graduate of Systems design engineering @ uwaterloo<br>🏡- CURRENTLY PART-TIME @ POINTS<br></p>
+        <p class="paragraph-light">🎓- Undergrad Student of Systems design engineering @ uwaterloo<br>🏡- CURRENTLY PART-TIME @ POINTS<br></p>
       </div>
       <p class="paragraph-3">In my spare time you can find me at Dundee Pottery, hiking local trails, or baking at home. The first photo is from my first time learning to wheel throw at Harbourfront Centre in Toronto 2017, and I haven&#x27;t stopped throwing since. I love the creativity involved while creating bisque shapes and then personalizing the glaze designs to customize each piece. The second photo is from a family trip to Banff, Alberta when we hiked to the Lake Agnes Tea House and met some friends along the way. The third photo is a pecan pie that my Nana taught me how to make from scratch last Thanksgiving holiday - it was delicious! My goal is to have all my dinnerware made out of ceramics and to create the perfect french macaroon. </p>
     </div>
