--- a/projects/aquabicylinder.html
+++ b/projects/aquabicylinder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Oct 23 2019 03:10:49 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Oct 25 2019 01:51:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5da7c6c7990d0a46f714b295" data-wf-site="5da68cccc102b983e8320279">
 <head>
   <meta charset="utf-8">
@@ -49,7 +49,7 @@
     <div class="project-section">
       <h3 class="project-section-title">Goal</h3>
       <p class="project-section-paragraph">To create a durable device that should reduce the negative health effects, decrease the time, and increase the amount of water transported each trip.</p>
-      <div class="w-layout-grid project-section-grid---3"><img src="../images/cad.jpg" srcset="../images/cad-p-500.jpeg 500w, ../images/cad.jpg 600w" sizes="100vw" alt="" class="project-section-image"><img src="../images/MFP.jpeg" srcset="../images/MFP-p-500.jpeg 500w, ../images/MFP.jpeg 510w" sizes="100vw" alt="" class="project-section-image"><img src="../images/HFP.jpeg" alt="" class="project-section-image"></div>
+      <div class="w-layout-grid project-section-grid---3"><img src="../images/cad.jpg" srcset="../images/cad-p-500.jpeg 500w, ../images/cad.jpg 600w" sizes="(max-width: 479px) 100vw, (max-width: 759px) 79vw, 600px" alt="" class="project-section-image"><img src="../images/MFP.jpeg" srcset="../images/MFP-p-500.jpeg 500w, ../images/MFP.jpeg 510w" sizes="(max-width: 479px) 100vw, (max-width: 662px) 77vw, 510px" alt="" class="project-section-image"><img src="../images/HFP.jpeg" alt="" class="project-section-image"></div>
     </div>
   </div>
   <div class="section">
