--- a/projects/cb57.html
+++ b/projects/cb57.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Oct 23 2019 03:10:49 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Oct 25 2019 01:51:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5da7bf78805cc12da5574ca7" data-wf-site="5da68cccc102b983e8320279">
 <head>
   <meta charset="utf-8">
@@ -41,8 +41,8 @@
   <div class="section">
     <div class="hr"></div>
     <div class="text-block-3">view process</div><img src="../images/down-arrow.svg" width="23" alt="" class="image"></div>
-  <div class="project-section">
-    <div class="w-layout-grid project-section-grid---3"><img src="../images/Step2_1.jpg" srcset="../images/Step2_1-p-500.jpeg 500w, ../images/Step2_1.jpg 768w" sizes="(max-width: 479px) 100vw, (max-width: 991px) 85vw, 768px" alt="" class="project-section-image"><img src="../images/Step1.jpg" srcset="../images/Step1-p-500.jpeg 500w, ../images/Step1.jpg 768w" sizes="(max-width: 479px) 100vw, (max-width: 991px) 85vw, 768px" alt="" class="project-section-image"><img src="../images/Step3_1.jpg" srcset="../images/Step3_1-p-500.jpeg 500w, ../images/Step3_1.jpg 768w" sizes="(max-width: 479px) 100vw, (max-width: 991px) 85vw, 768px" alt="" class="project-section-image"></div>
+  <div class="section">
+    <div class="w-layout-grid project-section-grid---3"><img src="../images/Step2_1.jpg" srcset="../images/Step2_1-p-500.jpeg 500w, ../images/Step2_1.jpg 768w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 85vw, (max-width: 991px) 89vw, 768px" alt="" class="project-section-image"><img src="../images/Step1.jpg" srcset="../images/Step1-p-500.jpeg 500w, ../images/Step1.jpg 768w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 85vw, (max-width: 991px) 89vw, 768px" alt="" class="project-section-image"><img src="../images/Step3_1.jpg" srcset="../images/Step3_1-p-500.jpeg 500w, ../images/Step3_1.jpg 768w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 85vw, (max-width: 991px) 89vw, 768px" alt="" class="project-section-image"></div>
   </div>
   <div class="section">
     <div class="text-block-4"><a href="#nav" id="back-to-top" class="back-to-top">back to top</a></div>
