--- a/projects/psyche.html
+++ b/projects/psyche.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Oct 23 2019 03:10:49 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Oct 25 2019 01:51:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5da7705c2783b36201fc3457" data-wf-site="5da68cccc102b983e8320279">
 <head>
   <meta charset="utf-8">
@@ -41,7 +41,7 @@
   <div class="section">
     <div class="hr"></div>
     <div class="text-block-3">view process</div><img src="../images/down-arrow.svg" width="23" alt="" class="image"></div>
-  <div class="project-section">
+  <div class="section">
     <div class="w-layout-grid project-section-grid---2"><img src="../images/Step2.jpg" width="610" srcset="../images/Step2-p-500.jpeg 500w, ../images/Step2-p-800.jpeg 800w, ../images/Step2.jpg 1024w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 83vw, 610px" id="w-node-b61e01559148-01fc3457" alt="" class="project-section-image"><img src="../images/Step3.jpg" srcset="../images/Step3-p-500.jpeg 500w, ../images/Step3.jpg 768w" sizes="100vw" alt="" class="project-section-image"><img src="../images/Step4.jpg" srcset="../images/Step4-p-500.jpeg 500w, ../images/Step4.jpg 768w" sizes="100vw" alt="" class="project-section-image"></div>
   </div>
   <div class="section">
