--- a/projects/spotify-redesign.html
+++ b/projects/spotify-redesign.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Oct 23 2019 03:10:49 GMT+0000 (UTC)  -->
+<!--  Last Published: Fri Oct 25 2019 01:51:26 GMT+0000 (UTC)  -->
 <html data-wf-page="5da76a2f9558deeeaf029a2a" data-wf-site="5da68cccc102b983e8320279">
 <head>
   <meta charset="utf-8">
@@ -70,11 +70,11 @@
     <div class="project-section">
       <h3 class="project-section-title">Artists</h3>
       <p class="project-section-paragraph">I wanted to feature The Tragically Hip, they are a Canadian Rock band that connected their listeners through generations. I grew up listening to them with my Dad.<br>Some of the changes here were based on users interacting with the pages, finding specific songs, and albums sometimes led to confusion.<br><br>Some of my favourites: Feist, The Hip, The Weeknd, Bon Iver, and so many more!</p>
-      <div class="project-section"><img src="../images/Artist.jpg" width="367" srcset="../images/Artist-p-500.jpeg 500w, ../images/Artist-p-800.jpeg 800w, ../images/Artist-p-1080.jpeg 1080w, ../images/Artist-p-1600.jpeg 1600w, ../images/Artist-p-2000.jpeg 2000w, ../images/Artist-p-2600.jpeg 2600w, ../images/Artist.jpg 2617w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, 367px" alt="" class="image-9"></div>
+      <div class="project-section"><img src="../images/Artist.jpg" width="1041" srcset="../images/Artist-p-500.jpeg 500w, ../images/Artist-p-800.jpeg 800w, ../images/Artist-p-1080.jpeg 1080w, ../images/Artist-p-1600.jpeg 1600w, ../images/Artist-p-2000.jpeg 2000w, ../images/Artist-p-2600.jpeg 2600w, ../images/Artist.jpg 2617w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 77vw, (max-width: 991px) 83vw, 920px" alt="" class="image-9"></div>
     </div>
     <div class="project-section">
       <h3 class="project-section-title">Profile</h3>
-      <p class="project-section-paragraph">This page was based mainly on Frank. The featured playlists are dynamic so the user is allowed to showcase what people view when someone visits their page. The ability to view all playlists outside of the side navigation bar was also added. It gives the users ability to view their public and private playlists together.</p>
+      <p class="project-section-paragraph">This page was based mainly on Frank. The featured playlists are dynamic so the user is allowed to showcase what people view when someone visits their page which adds customization to the profile. Another feature that was added was the ability to view all playlists on their profile giving the users ability to view their public and private playlists together. The lock was added to show which playlists were private since the live version did not show the difference. </p>
       <div class="project-section"><img src="../images/Profile.jpg" width="920" srcset="../images/Profile-p-500.jpeg 500w, ../images/Profile-p-1080.jpeg 1080w, ../images/Profile-p-2000.jpeg 2000w, ../images/Profile-p-2600.jpeg 2600w, ../images/Profile.jpg 2617w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 77vw, (max-width: 991px) 83vw, 920px" alt="" class="image-9"></div>
     </div>
     <div class="project-section">
